--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,17 @@ spring:
     jpa:
       repositories:
         enabled: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+  health:
+    defaults:
+      enabled: true
+    redis:
+      enabled: false  # Redis 헬스체크만 비활성화
